--- a/main.css
+++ b/main.css
@@ -382,7 +382,7 @@ nav ul li a{
 }
 @media(max-width:800px){
     .home{
-        padding: 10rem 0 0 0 ;
+        padding: 6rem 0 0 0 ;
         display: flex;
         justify-content: center;
     }
@@ -460,6 +460,18 @@ nav ul li a{
     }
     nav{
         padding: 1.5rem 1rem 1.75rem 2rem;
+    }
+    .input{
+        width: 80%;
+    }
+    .form{
+        padding: 0 2rem;
+    }
+    .name-email-fields .input{
+        width: 80%;
+    }
+    .mobile-field .input,.message-field .input{
+        width: 91%;
     }
 }
 @media(max-width:398px){
