--- a/main.css
+++ b/main.css
@@ -80,8 +80,8 @@ nav ul li a{
     list-style: none;
 }
 .home{
-    height: 100vh;
-    padding: 15rem 12rem 0rem 12rem;
+    height: 100%;
+    padding: 15rem 12rem 10rem 12rem;
 }
 .home-container{
     padding: 0 0 0 5rem;
@@ -268,7 +268,7 @@ nav ul li a{
 }
 @media(max-width:1300px){
     .home{
-        padding: 20% 8rem 0rem 6rem;
+        padding: 20% 8rem 10rem 6rem;
     }
 }
 @media(max-width:1245px){
@@ -284,12 +284,12 @@ nav ul li a{
 }
 @media(max-width:1140px){
     .home{
-        padding: 15rem 6rem 0 6rem;
+        padding: 15rem 6rem 10rem 6rem;
     }
 }
 @media(max-width:1100px){
     .home{
-        padding: 15rem 4rem 0 4rem;
+        padding: 15rem 4rem 10rem 4rem;
     }
 }
 @media(max-width: 1050px){
@@ -341,7 +341,7 @@ nav ul li a{
         font-size: 2.5rem;
     }
     .home{
-        padding: 15rem 2rem 0 2rem;
+        padding: 15rem 2rem 10rem 2rem;
     }
     .home-content h5,.home-content p{
         font-size: 1rem;
